Project and stuff

--- a/app/globals.css
+++ b/app/globals.css
@@ -58,4 +58,14 @@
     body {
       @apply bg-background text-foreground;
     }
+    body::-webkit-scrollbar  {
+      overflow: -moz-scrollbars-none;
+      -ms-overflow-style: none;
+      scrollbar-width: none;
+    }
+  
+    body::-webkit-scrollbar-thumb {
+      display: none;
+    }
+
   }
